--- a/app/package.json
+++ b/app/package.json
@@ -34,16 +34,15 @@
   ],
   "private": true,
   "dependencies": {
+    "bufferhelper": "^0.2.0",
     "current-path": "^1.0.0",
-    "display-notification": "^1.0.1",
     "findup-sync": "^0.2.1",
     "fix-path": "^1.0.0",
     "get-gulp-tasks": "^1.0.1",
-    "gulp": "^3.6.2",
+    "gulp": "^3.9.0",
+    "iconv-lite": "^0.4.11",
+    "jschardet": "^1.3.0",
     "lodash": "^3.8.0"
   },
-  "devDependencies": {
-    "electron-packager": "^3.3.0",
-    "electron-prebuilt": "^0.25.2"
-  }
+  "devDependencies": {}
 }
