--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "gulp as an app (OS X)",
   "license": "MIT",
-  "repository": "sindresorhus/gulp-app",
+  "repository": "fritx/gulp-app",
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . $npm_package_productName --prune --asar --ignore=node_modules/electron-prebuilt --ignore=node_modules/electron-packager --ignore=.git"
+    "build": "electron-packager . $npm_package_productName --version=0.31.0 --ignore=node_modules/electron-prebuilt --ignore=node_modules/electron-packager",
+    "build_": "electron-packager . $npm_package_productName --prune --asar --ignore=node_modules/electron-prebuilt --ignore=node_modules/electron-packager"
   },
   "keywords": [
     "electron-app",
@@ -35,14 +36,14 @@
   "private": true,
   "dependencies": {
     "bufferhelper": "^0.2.0",
-    "current-path": "^1.0.0",
     "findup-sync": "^0.2.1",
     "fix-path": "^1.0.0",
-    "get-gulp-tasks": "^1.0.1",
     "gulp": "^3.9.0",
-    "iconv-lite": "^0.4.11",
-    "jschardet": "^1.3.0",
-    "lodash": "^3.8.0"
+    "lodash": "^3.8.0",
+    "resolve-from": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "electron-prebuilt": "0.31.0",
+    "electron-packager": "^5.0.2"
+  }
 }
