--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
   "private": true,
   "dependencies": {
     "bufferhelper": "^0.2.0",
+    "display-notification": "^1.0.2",
     "findup-sync": "^0.2.1",
     "fix-path": "^1.0.0",
     "lodash": "^3.8.0",
